fix: resolve 403 Forbidden issue by removing @Component from SecurityFilter
- Remove @Component annotation and import from SecurityFilter
- Add FilterRegistrationBean to auth-service SecurityConfig
- Configure requireExplicitSave(true) for SecurityContext
- Tested: /api/v1/auth/me returns HTTP 200 with user data

Root cause: SecurityFilter was auto-registered as servlet filter due to @Component,
causing SecurityContext to be cleared before authorization checks.

Solution: Remove @Component + add FilterRegistrationBean.setEnabled(false)
to prevent auto-registration, ensuring SecurityFilter only runs in Security chain.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>